fix overflow

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -2,15 +2,22 @@ html{
   font-size: 16px;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 body{
   margin: 0;
   box-sizing: border-box;
   background: linear-gradient(135deg, #f5f5f5, #c3c3c3);
   font-family: 'Roboto', sans-serif;
-  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 nav h1 {
@@ -25,33 +32,36 @@ h1, h2, h3{
 }
 
 h1{
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 
 h2{
-  font-size: 2rem;
+  font-size: 2.5rem;
+}
+h3{
+  font-size:1.25rem;
 }
 
 p, a{
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 section{
-  width: 80%;
-  margin: 0 10%;
+  width: 90%;
+  margin: 0;
 }
 
 .projects {
   background-color: #f8f9fa;
   border-radius: 10px;
-  padding: 5rem;
+  padding: 3.5rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .skills {
   background: linear-gradient(135deg, #3498DB, #2E86C1);
   color: white;
-  padding: 5rem;
+  padding: 3.5rem;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -59,20 +69,21 @@ section{
 
 .projects, .skills{
   margin-bottom: 50px;
+  overflow: hidden;
+  flex-wrap: wrap;
 }
 
 header{
   display: flex;
   justify-content: center;
   position: sticky;
-  top: 0px;
+  top: 0;
   background-color: #110d4a;
   /* #1B1475 */
   width: 100%;
-  max-height: 10%;
   color: white;
   z-index: 1;
-  margin-bottom: 30px;
+  margin-bottom: 2.5rem;
 }
 
 
@@ -81,47 +92,63 @@ nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
+  width: 85%;
+  padding: 1rem;
 }
 
 nav h1{
-  letter-spacing: 15px;
+  letter-spacing: 1rem;
 }
 
 @media only screen and (max-width: 768px){
-  nav h1{
-    font-size: 1.75rem;
+  h1{
+    font-size: 2rem;
   }
-
+  h2{
+    font-size: 1.5rem;
+  }
+  h3{
+    font-size: 1rem;
+  }
+  p, a{
+    font-size: 1rem;
+  }
   main{
-    width: 80%;
+    width: 85%;
   }
 }
 
-@media only screen and (max-width: 375px){
+@media only screen and (max-width: 425px){
+
   nav h1{
     font-size: 1rem;
   }
 
   .about{
-    font-size: 2px;
+    font-size: 0.5rem;
+    padding: 0.2rem;
   }
+  main a{
+    font-size: 0.5rem;
+    padding: 0.2rem;
+  }
+
 }
 
 nav span{
-  letter-spacing: 5px;
+  letter-spacing: 0.4rem;
 }
 
 .dropdown{
   cursor: pointer;
-  padding: 3px;
+  padding: 0.2rem;
 }
 
 .dropdown:hover .dropdown-content{
   opacity: 1;
   transform: translateY(0);
   pointer-events: auto;
-  max-height:3000px;
+  max-height: 20rem;
 }
 
 .dropdown-content{
@@ -131,9 +158,9 @@ nav span{
   background-color: rgb(238, 238, 238);
   width: auto;
   overflow: hidden;
-  max-height: 100;
   pointer-events: none;
   transform: translateY(-10);
+  max-height: 0;
   transition: max-height 1s ease-out, opacity .3s ease, transform .3s ease;
 }
 
@@ -151,17 +178,16 @@ nav span{
 }
 
 .bar{
-  width: 25px;
-  height: 4px;
+  width: 2rem;
+  height: 0.30rem;
   background-color: white;
-  margin: 4px 0;
+  margin: 0.30rem 0;
 }
 
 main{
   display: flex;
   height: auto;
-  width: 60%;
-  margin: 10%;
+  width: 70%;
   flex-wrap: nowrap;
 }
 
@@ -176,20 +202,18 @@ main{
 main p{
   line-height: 2;
   display: flex;
-  padding: 20px;
+  padding: 1.5rem;
   flex:1;
   flex-direction: column;
   justify-content: center;
-  max-width: 600px;
+  max-width: fit-content;
   margin: auto;
   color: #5d6d7e;
-  font-size: 1.2rem;
 }
 
 main a{
   display: inline;
   color:#3498db;
-  font-size: 1.2rem;
   text-decoration: none;
   transition: color .3 ease, text-decoration .3s ease;
 }
@@ -199,7 +223,7 @@ main {
   border-radius: 10px;
   padding: 3rem;
   margin: 2rem auto;
-  max-width: 800px;
+  max-width: 100%;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -208,10 +232,6 @@ main {
 .about a:hover{
   text-decoration: underline;
   color: #2074ac;
-}
-
-.about p + p {
-  margin-top: 1rem;
 }
 
 
@@ -231,6 +251,7 @@ main {
   margin-top: 2rem;
   display: flex;
   justify-content: space-evenly;
+  padding: 1.5rem;
 }
 
 .projects a {
@@ -263,6 +284,8 @@ main {
   margin-top: 25px;
   display: flex;
   justify-content: space-evenly;
+  overflow:hidden;
+  padding: 1.5rem;
 }
 
 .skill{
@@ -270,6 +293,9 @@ main {
   text-decoration: none;
   color: rgb(108, 108, 108);
   transition: transform .3s ease;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
 }
 
 a.skill:hover{
@@ -284,34 +310,26 @@ footer{
   position:  relative;
   bottom: 0;
   width: 100%;
-  max-height: 7%;
   background-color: #110d4a;
   color: white;
-  margin-bottom: 0;
-  padding: 1.5rem 0;
   text-align: center;
-  font-size: 0.9rem;
-
 }
-
-.icon {
-  margin: 0 10px; 
-}
-
 
 footer h3{
   color: white;
 }
 
-.icon{
-  font-size: 15px;
+a.icon{
+  text-decoration: none;
+  font-size: 1rem;
   color: white;
   text-decoration: none;
   transition: transform .2s ease-out;
+  margin: 0 0.5rem; 
 }
 
-a.icon{
-  text-decoration: none;
+div.contact-info{
+  margin-top: 0.5rem;
 }
 
 .icon:hover{
